logs/pipeline_2026-06-02_23-44-37.log
  File "/home/cathyvm/actions-runner/_work/LRL-French_Models_Pipeline/LRL-French_Models_Pipeline/lrl_fr-pipeline.py", line 32
    print("\n" + "=" * 80)
                          ^
IndentationError: unindent does not match any outer indentation level
